--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,11 @@ sudo: false
 language: ruby
 rvm:
   - 2.3.3
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 before_install: gem install bundler -v 1.14.6
+script: "bundle exec rake spec"
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
