--- a/ci.docker-compose.yml
+++ b/ci.docker-compose.yml
@@ -16,6 +16,9 @@ services:
       - db
   shopinvader:
     image: quay.io/akretion/docky-ruby:latest
+    environment:
+      - ALGOLIA_APP_ID=C04JR8U8Y1
+      - ALGOLIA_API_KEY=610bbcca628ecb66a8e3ec44483c9b33
     volumes:
       - .:/workspace
       - ./bundle:/usr/local/bundle
