--- a/spec/integration/template/config/site.yml
+++ b/spec/integration/template/config/site.yml
@@ -11,7 +11,7 @@ domains: [example.org]
 # The locale listed first is the site's default locale
 # Locales are specified using ISO language codes
 # Possible locales include: en, de, fr, pl, pt-BR, it, nl, nb, es, ru, et, ja, zh-CN
-locales: [en, fr]
+locales: [en]
 
 seo_title: Shopinvader demo | May the discount be with you
 meta_keywords: "the Shopinvader  demo web store"
