[add] spec files

--- a/spec/integration/template/config/site.yml
+++ b/spec/integration/template/config/site.yml
@@ -43,6 +43,19 @@ metafields:
           ["*", { "name": "category", "template_handle": "category", "index": "categories" } ],
           ["*", { "name": "product", "template_handle": "product", "index": "products" } ]
       ]
+  elasticsearch:
+    server_IP: '127.0.0.1'
+    server_Port: "9200"
+    indices: >
+      [
+        { "name": "categories", "index": "demo_elasticsearch_backend_shopinvader_category", "type":"odoo"},
+        { "name": "products", "index": "demo_elasticsearch_backend_shopinvader_variant", "type":"odoo"}
+      ]
+    routes: >
+      [
+          ["*", { "name": "category", "template_handle": "category", "index": "categories" } ],
+          ["*", { "name": "product", "template_handle": "product", "index": "products" } ]
+      ]
   erp:
     api_key: "12345"
     api_url: http://odoo:8069/shopinvader
