Add test for checking issue at logout
When we logout we must not renderer the current information of the user
log.
Also use pending branch of steam, fix ci docker commpose config

--- a/ci.docker-compose.yml
+++ b/ci.docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - VIRTUAL_HOST=shopinvader-odoo.dy
       - VIRTUAL_PORT=8069
       - DEMO=True
+      - ODOO_ADMIN_PASSWORD=test
     image: quay.io/akretion/shopinvader-odoo:${VERSION}-latest
     depends_on:
       - db
