--- a/ci.docker-compose.yml
+++ b/ci.docker-compose.yml
@@ -6,6 +6,12 @@ services:
     volumes:
       - .db/:/var/lib/postgresql/data
     image: quay.io/akretion/postgresql:10
+  elastic:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.0.0
+    environment:
+      - discovery.type=single-node
+    volumes:
+      - ./esdata:/usr/share/elasticsearch/data
   odoo:
     environment:
       - VIRTUAL_HOST=shopinvader-odoo.dy
@@ -30,4 +36,5 @@ services:
       - ./bundle:/usr/local/bundle
     depends_on:
       - odoo
+      - elastic
 version: '3'
