Fix CI, need to use an admin api key to be able to clear the index

--- a/ci.docker-compose.yml
+++ b/ci.docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - PGUSER=odoo
       - PGDATABASE=odoodb
       - ALGOLIA_APP_ID=C04JR8U8Y1
-      - ALGOLIA_API_KEY=610bbcca628ecb66a8e3ec44483c9b33
+      - ALGOLIA_API_KEY=${ALGOLIA_API_KEY}
       - ELASTIC_IP=127.0.0.1
       - ELASTIC_PORT=9200
     volumes:
