Add failling case for redirection on multilang

--- a/ci.docker-compose.yml
+++ b/ci.docker-compose.yml
@@ -2,7 +2,7 @@ services:
   db:
     environment:
       - POSTGRES_USER=odoo
-      - POSTGRES_DB=odoodb
+      - POSTGRES_DB=db
     volumes:
       - .db/:/var/lib/postgresql/data
     image: quay.io/akretion/postgresql:10
@@ -14,6 +14,7 @@ services:
       - ./esdata:/usr/share/elasticsearch/data
   odoo:
     environment:
+      - DB_NAME=db
       - VIRTUAL_HOST=shopinvader-odoo.dy
       - VIRTUAL_PORT=8069
       - DEMO=True
@@ -26,7 +27,7 @@ services:
     environment:
       - PGHOST=db
       - PGUSER=odoo
-      - PGDATABASE=odoodb
+      - PGDATABASE=db
       - ALGOLIA_APP_ID=C04JR8U8Y1
       - ALGOLIA_API_KEY=${ALGOLIA_API_KEY}
       - ELASTIC_IP=127.0.0.1
