[FIX] fix missing evaluate in path to

--- a/ci.docker-compose.yml
+++ b/ci.docker-compose.yml
@@ -41,7 +41,7 @@ services:
     environment:
       - PGHOST=db
       - PGUSER=odoo
-      - PGDATABASE=db
+      - PGDATABASE=odoo-shopinvader-demo
       - ALGOLIA_APP_ID=C04JR8U8Y1
       - ELASTIC_IP=127.0.0.1
       - ELASTIC_PORT=9200
