--- a/odoo/Dockerfile-12
+++ b/odoo/Dockerfile-12
@@ -1,8 +1,8 @@
-FROM quay.io/acsone/odoo-bedrock:12.0-py35-latest
+FROM ghcr.io/acsone/odoo-bedrock:12.0-py37-latest
 
 RUN set -e \
   && apt update \
-  && apt -y install --no-install-recommends postgresql-client \
+  && apt -y install --no-install-recommends postgresql-client git \
   && apt -y clean \
   && rm -rf /var/lib/apt/lists/*
 
@@ -10,5 +10,6 @@ COPY ./entrypoint-db /odoo/start-entrypoint.d/
 
 COPY ./requirements-12.txt /tmp/requirements.txt
 
+RUN pip install setuptools-scm
 RUN pip install -r /tmp/requirements.txt
 
