--- a/odoo/requirements-12.txt
+++ b/odoo/requirements-12.txt
@@ -5,7 +5,7 @@
 # odoo + shopinvader
 -r https://raw.githubusercontent.com/odoo/odoo/12.0/requirements.txt
 https://nightly.odoo.com/12.0/nightly/src/odoo_12.0.latest.zip
-https://github.com/OCA/openupgradelib/archive/master.tar.gz
+openupgradelib @ git+https://github.com/OCA/openupgradelib.git
 odoo12_addon_shopinvader_demo_app
 
 
