--- a/ci.docker-compose.yml
+++ b/ci.docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - PGHOST=db
       - PGUSER=odoo
       - PGDATABASE=odoo-shopinvader-demo
+      - PGPASSWORD=odoo
       - ALGOLIA_APP_ID=C04JR8U8Y1
       - ELASTIC_IP=127.0.0.1
       - ELASTIC_PORT=9200
