Fix elastic sitemap and improve speed and add key noindex
Only request needed field for elastic
And always use main key and noindex for elastic (missing key is not an
issue)

--- a/spec/integration/template/config/site.yml
+++ b/spec/integration/template/config/site.yml
@@ -36,7 +36,7 @@ metafields:
     indices: >
       [
         { "name": "categories", "index": "ci_shopinvader_category" },
-        { "name": "products", "index": "ci_shopinvader_variant" }
+        { "name": "products", "index": "ci_shopinvader_variant", "have_variant": true }
       ]
     routes: >
       [
